Fix spacing

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ ul {
     display: flex;
     flex-direction: column;
     margin: 50px;
+    margin-right: 0px;
     color: white;
 }
 
@@ -187,6 +188,7 @@ ul {
     color: white;
     font-size: medium;
     font-weight: bold;
+    margin: 10px;
 }
 
 .footer {
